--- a/index.html
+++ b/index.html
@@ -50,9 +50,24 @@
         </div>
 
         <div class="memories">
-            <div class="momoriesLeft"></div>
-            <div class="meomoriesMid"></div>
-            <div class="memoriesRight"></div>
+            <div class="momoriesLeft">
+                <img src="./resources/images/scribble_light_3.png" alt="leftImage">
+            </div>
+            <div class="meomoriesMid">
+                <h1>Create a memory to remember</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae praesentium sit quam consectetur. Quas nulla ipsa exerci Lorem ipsum dolor sit amet consectetur.</p>
+
+                <button type="button" class="travelLogsBtn"><h3>My Travel Logs</h3></button>
+            </div>
+            <div class="memoriesRight">
+                <!-- <img src="./resources/images/scribble_light_2.png" alt="rightImage"> -->
+            </div>
+        </div>
+
+        <div class="travels">
+            <div>hey1</div>
+            <div>hey2</div>
+            <div>hey2</div>
         </div>
     </div>
 </body>
