--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="meomoriesMid">
                 <h1>Create a memory to remember</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae praesentium sit quam consectetur. Quas nulla ipsa exerci Lorem ipsum dolor sit amet consectetur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae praesentium sit quam consectetur. Quas nulla ipsa exerci Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore accusamus minima, harum atque labore ipsum..</p>
 
                 <button type="button" class="travelLogsBtn"><h3>My Travel Logs</h3></button>
             </div>
@@ -64,11 +64,59 @@
             </div>
         </div>
 
-        <div class="travels">
-            <div>hey1</div>
-            <div>hey2</div>
-            <div>hey2</div>
+
+
+
+
+
+        <div class="travelsContainer">
+             <div class="travels">
+                <div class="travel" id="travel1">
+                    <div class="travelImageContainer">
+                        <img src="./resources/images/Place Your Image Here (Double Click To Edit) (1).png" alt="travelImage">
+                    </div>
+                    <div class="barLine"></div>
+                    <div class="travelTitle"><h1>Lorem ipsum dolor sit amet
+                    </h1></div>
+                    <div class="travelDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam animi quasi omnis. Repudiandae rerum doloremque corrupti, esse nulla qui unde Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem perspiciatis</div>
+                </div>
+                <div class="travel" id="travel2">
+                    <div class="travelImageContainer">
+                        <img src="./resources/images/Place Your Image Here (Double Click To Edit) (2).png" alt="travelImage">
+                    </div>
+                    <div class="barLine"></div>
+                    <div class="travelTitle"><h1>Lorem ipsum dolor sit amet
+                    </h1></div>
+                    <div class="travelDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam animi quasi omnis. Repudiandae rerum doloremque corrupti, esse nulla qui unde Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore praesentium</div>
+
+                </div>
+                <div class="travel" id="travel3">
+
+                    <div class="travelImageContainer">
+                        <img src="./resources/images/Place Your Image Here (Double Click To Edit) (3).png" alt="travelImage">
+                    </div>
+                    <div class="barLine"></div>
+                    <div class="travelTitle"><h1>Lorem ipsum dolor sit amet
+                    </h1></div>
+                    <div class="travelDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam animi quasi omnis. Repudiandae rerum doloremque corrupti, esse nulla qui unde Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, perspiciatis!.</div>
+                </div>
+             </div>
         </div>
+
+
+        <div class="visitPlaces">
+            <div class="seeNewplaces">
+
+                <div class="icon"></div>
+                <div class="phrase"><h1>See places you have <span>never</span>been before</h1></div>
+                <div class="phraseDesc"></div>
+            </div>
+            <div class="featuredPlaceContainer">
+
+            </div>
+        </div>
+
+
     </div>
 </body>
 </html>
